--- a/http/centos-7.1/anaconda-ks.cfg
+++ b/http/centos-7.1/anaconda-ks.cfg
@@ -1,7 +1,9 @@
 install
 text
 reboot
-url --mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=os
+#cannot resolve it. Disabled
+#url --mirrorlist=http://mirrorlist.centos.org/?release=$releasever&arch=$basearch&repo=os
+url --url=http://62.149.2.9/pub/centos/$releasever/os/$basearch/
 lang en_US.UTF-8
 keyboard us
 timezone --utc Etc/UTC
