--- a/vagrant/centos6/Vagrantfile
+++ b/vagrant/centos6/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure(2) do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://atlas.hashicorp.com/search.
-  config.vm.box = "centos-7"
+  config.vm.box = "centos-6"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -70,15 +70,13 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get update
   #   sudo apt-get install -y apache2
   # SHELL
-  config.vm.provision "shell" do |s|
-      s.inline = "echo Skipping the bash provision!"
+  #config.vm.provision "shell" do |s|
    #  s.path = "bootstrap.sh"
    #  s.path = "zabbix.sh"
    #  s.path = "environment.sh"
-  end
+  #end
   config.vm.provision "chef_solo" do |chef|
      chef.add_recipe "app-cookbook"
-     chef.add_recipe "zabbix2"
    #  chef.add_recipe "zabbix-monitor"
    #  chef.add_recipe "wildfly"
   end
