--- a/vagrant/centos7/Vagrantfile
+++ b/vagrant/centos7/Vagrantfile
@@ -53,6 +53,12 @@ Vagrant.configure(2) do |config|
   #   vb.memory = "1024"
   # end
   #
+  config.vm.provider :libvirt do |libvirt|
+      libvirt.uri = 'qemu+unix:///system'
+      libvirt.host = "centos.msk.pp.ua"
+      libvirt.memory = 2048
+      libvirt.cpus = 2
+  end
   # View the documentation for the provider you are using for more
   # information on available options.
 
@@ -77,8 +83,11 @@ Vagrant.configure(2) do |config|
    #  s.path = "environment.sh"
   end
   config.vm.provision "chef_solo" do |chef|
-     chef.add_recipe "app-cookbook"
-     chef.add_recipe "zabbix2"
+     chef.version = "12.3.0"
+     #chef.add_recipe "app-cookbook"
+     chef.add_recipe "selinux::permissive"
+     chef.add_recipe "zabbix"
+   #  chef.add_recipe "zabbix2::server"
    #  chef.add_recipe "zabbix-monitor"
    #  chef.add_recipe "wildfly"
   end
