--- a/vagrant/fedora22/Vagrantfile
+++ b/vagrant/fedora22/Vagrantfile
@@ -53,6 +53,12 @@ Vagrant.configure(2) do |config|
   #   vb.memory = "1024"
   # end
   #
+  config.vm.provider :libvirt do |libvirt|
+      libvirt.uri = 'qemu+unix:///system'
+      libvirt.host = "fedora.msk.pp.ua"
+      libvirt.memory = 2048
+      libvirt.cpus = 2
+  end
   # View the documentation for the provider you are using for more
   # information on available options.
 
