--- a/vagrant/fedora22/Vagrantfile
+++ b/vagrant/fedora22/Vagrantfile
@@ -14,6 +14,8 @@ Vagrant.configure(2) do |config|
   # boxes at https://atlas.hashicorp.com/search.
   config.vm.box = "fedora-22"
 
+  config.vm.hostname = "fedora.msk.pp.ua"
+
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
   # `vagrant box outdated`. This is not recommended.
@@ -58,6 +60,7 @@ Vagrant.configure(2) do |config|
       libvirt.host = "fedora.msk.pp.ua"
       libvirt.memory = 2048
       libvirt.cpus = 2
+      #libvirt.cmd_line = "selinux=0"
   end
   # View the documentation for the provider you are using for more
   # information on available options.
