--- a/vagrant/fedora22/Vagrantfile
+++ b/vagrant/fedora22/Vagrantfile
@@ -81,13 +81,11 @@ Vagrant.configure(2) do |config|
   # SHELL
   config.vm.provision "shell" do |s|
      s.path = "bootstrap.sh"
-   #  s.path = "zabbix.sh"
-   #  s.path = "environment.sh"
   end
-  config.vm.provision "chef_solo" do |chef|
+  #config.vm.provision "chef_solo" do |chef|
    #  chef.add_recipe "app-cookbook"
    #  chef.add_recipe "zabbix-monitor"
    #  chef.add_recipe "wildfly"
-  end
+  #end
 
 end
