--- a/vagrant/fedora22/Vagrantfile
+++ b/vagrant/fedora22/Vagrantfile
@@ -55,6 +55,10 @@ Vagrant.configure(2) do |config|
   #   vb.memory = "1024"
   # end
   #
+  config.vm.provider "virtualbox" do |vb|
+	vb.gui = "true"
+        vb.memory = "2048"
+  end
   config.vm.provider :libvirt do |libvirt|
       libvirt.uri = 'qemu+unix:///system'
       libvirt.host = "fedora.msk.pp.ua"
